// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for the ListItems component no such persons with no cards 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
         
        no such persons
         
      </div>
      ;
    </div>
  </body>,
  "container": <div>
    <div>
       
      no such persons
       
    </div>
    ;
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tests for the ListItems component returns no cards found on wrong search 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      ;
    </div>
  </body>,
  "container": <div>
    ;
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tests for the ListItems component show items 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="itemwrapper"
      >
        <div
          class="view"
        >
          <span>
             
            Johnny Depp
             
          </span>
          <a
            class="link"
            href="/details/1"
          >
            <img
              alt="person name"
              class="itemimg"
              id="rockNew"
              src="https://rickandmortyapi.com/api/character/avatar/183.jpeg"
            />
          </a>
        </div>
        <div
          class="description"
        >
          <span>
             Description 👾 
          </span>
          <div
            class="descriptionList"
          >
            <span>
              species: 
              Human
            </span>
            <span>
              planet: 
              Earth (C-500A)
               🪐
            </span>
            <span>
              gender: 
              Male
               
            </span>
          </div>
        </div>
      </div>
      <div
        class="itemwrapper"
      >
        <div
          class="view"
        >
          <span>
             
            Johnny Depp
             
          </span>
          <a
            class="link"
            href="/details/183"
          >
            <img
              alt="person name"
              class="itemimg"
              id="rockNew"
              src="https://rickandmortyapi.com/api/character/avatar/183.jpeg"
            />
          </a>
        </div>
        <div
          class="description"
        >
          <span>
             Description 👾 
          </span>
          <div
            class="descriptionList"
          >
            <span>
              species: 
              Human
            </span>
            <span>
              planet: 
              Earth (C-500A)
               🪐
            </span>
            <span>
              gender: 
              Male
               
            </span>
          </div>
        </div>
      </div>
      ;
    </div>
  </body>,
  "container": <div>
    <div
      class="itemwrapper"
    >
      <div
        class="view"
      >
        <span>
           
          Johnny Depp
           
        </span>
        <a
          class="link"
          href="/details/1"
        >
          <img
            alt="person name"
            class="itemimg"
            id="rockNew"
            src="https://rickandmortyapi.com/api/character/avatar/183.jpeg"
          />
        </a>
      </div>
      <div
        class="description"
      >
        <span>
           Description 👾 
        </span>
        <div
          class="descriptionList"
        >
          <span>
            species: 
            Human
          </span>
          <span>
            planet: 
            Earth (C-500A)
             🪐
          </span>
          <span>
            gender: 
            Male
             
          </span>
        </div>
      </div>
    </div>
    <div
      class="itemwrapper"
    >
      <div
        class="view"
      >
        <span>
           
          Johnny Depp
           
        </span>
        <a
          class="link"
          href="/details/183"
        >
          <img
            alt="person name"
            class="itemimg"
            id="rockNew"
            src="https://rickandmortyapi.com/api/character/avatar/183.jpeg"
          />
        </a>
      </div>
      <div
        class="description"
      >
        <span>
           Description 👾 
        </span>
        <div
          class="descriptionList"
        >
          <span>
            species: 
            Human
          </span>
          <span>
            planet: 
            Earth (C-500A)
             🪐
          </span>
          <span>
            gender: 
            Male
             
          </span>
        </div>
      </div>
    </div>
    ;
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
